[package]
name = "load_balancer" # Cambiado el nombre para más claridad
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] } # Añadir clap
serde_json = "1.0" # Añadido para posible manejo futuro de JSON si es necesario, aunque ahora pasamos Bytes