[package]
name = "load_balancer" # Cambiado el nombre para más claridad
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] } # Añadir clap
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Ídem
hostname = "0.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
url = "2.5"